# advent_24

./: .gitignore  CMakeLists.txt  get_input.sh
day1/: CMakeLists.txt  part1.cc  part2.cc
day2/: CMakeLists.txt  part1.cc  part2.cc
day3/: CMakeLists.txt  day3.cc
day4/: CMakeLists.txt  day4.cc
day5/: CMakeLists.txt  day5.cc
day6/: CMakeLists.txt  day6.cc
day7/: CMakeLists.txt  day7.cc
day8/: CMakeLists.txt  day8.cc
utils/: CMakeLists.txt  aoclib.hpp
